# streamlet

./: .dockerignore  .gitignore  Dockerfile  README.md  eos.Dockerfile  eos.repo  openshift.yaml  proxychain.conf  pyproject.toml
.github/workflows/: build.yml  codeql.yml  gendoc.yml  linting.yml  testing.yml
docs/: MODULES.md  SETTINGS.md
docs/generators/: generate_modules.py  generate_settings.py
examples/: 0_demo.yaml  1_basic.yaml  2_with_template.yaml  3_with_transform.yaml  4_with_routing.yaml  5_with_debugging.yaml  6_with_generator.yaml  7_with_modifiers.yaml
src/: main.py
src/core/: __init__.py  abstract.py  flow.py  helpers.py  logger.py  metric.py  modules.py  settings.py  task.py
src/core/validation/: __init__.py  helpers.py  schemas.py  validators.py
src/modules/: eos.py  http.py  inspirehep.py  kafka.py  monit.py  opensearch.py  opentelemetry.py  postgresql.py  streamlet.py  transforms.py
tests/: __init__.py  conftest.py
tests/fixtures/: e2e.py  modules.py
tests/test_core/: test_flow.py  test_helpers.py  test_metric.py  test_settings.py
tests/test_modules/: test_http.py  test_monit.py  test_opensearch.py  test_postgresql.py  test_streamlet.py  test_transforms.py
